--- a/shared/assets/styles/modules/_chat.scss
+++ b/shared/assets/styles/modules/_chat.scss
@@ -70,7 +70,7 @@
       margin-right: 5px;
     }
     .name {
-      padding: 0 12px 0 0;
+      padding: 0 1.2rem 0 0;
       &:after {
         content: ": ";
       }
@@ -138,7 +138,6 @@
   color: #fff;
   font-size: 14px;
   padding: 0 5px;
-  margin-right: 5px;
   background-color: $navBg;
   font-family: $robotoC;
   display: inline-block;
