--- a/shared/assets/styles/modules/crash/_crashLobby.scss
+++ b/shared/assets/styles/modules/crash/_crashLobby.scss
@@ -7,6 +7,6 @@
     }
   }
   .game__hash {
-    margin-top: 7rem;
+    margin-top: 5rem;
   }
 }
